Perkin-UAT/force-app/main/default/objects/Order/Order.object-meta.xml
<CustomObject>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>