Perkin-UAT/force-app/main/default/objects/Order/fields/After_Workflow_Trigger__c.field-meta.xml
<CustomField>
    <fullName>After_Workflow_Trigger__c</fullName>
    <formula>IF(NOW()- CreatedDate &gt; 0.25, TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>After Workflow Trigger</label>
    <type>Checkbox</type>
</CustomField>