Perkin-UAT/force-app/main/default/objects/Order/fields/B2B_Cart_Id__c.field-meta.xml
<CustomField>
    <fullName>B2B_Cart_Id__c</fullName>
    <label>B2B Cart Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>