Perkin-UAT/force-app/main/default/objects/Order/fields/INF_OrderNum__c.field-meta.xml
<CustomField>
    <fullName>INF_OrderNum__c</fullName>
    <formula>Opportunity.GP_OrderNum_INF__c</formula>
    <label>INF OrderNum</label>
    <type>Text</type>
</CustomField>