Perkin-UAT/force-app/main/default/objects/Order/fields/Legacy_Source__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Source__c</fullName>
    <description>used for legacy data loads(S-692785)</description>
    <inlineHelpText>used for legacy data loads</inlineHelpText>
    <label>Legacy Source</label>
    <length>8</length>
    <type>Text</type>
</CustomField>