Perkin-UAT/force-app/main/default/objects/Order/fields/Order_Legacy_ID__c.field-meta.xml
<CustomField>
    <fullName>Order_Legacy_ID__c</fullName>
    <description>S-692785/T-972141. Created as part of data migration</description>
    <externalId>true</externalId>
    <label>Order Legacy ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>