Perkin-UAT/force-app/main/default/objects/Order/fields/Salesrep__c.field-meta.xml
<CustomField>
    <fullName>Salesrep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Salesrep</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Orders1</relationshipName>
    <type>Lookup</type>
</CustomField>