Perkin-UAT/force-app/main/default/objects/Order/fields/Stripe_Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Payment_Method__c</fullName>
    <label>Stripe Payment Method</label>
    <length>255</length>
    <type>Text</type>
</CustomField>